--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     }
     dependencies {
 //        classpath 'com.android.tools.build:gradle:2.2.0-alpha1'
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        //要对应java1.8，2.2.0才能使用unit测试。idea/misc.xml
+        classpath 'com.android.tools.build:gradle:2.2.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -38,14 +39,16 @@ ext {
 //     Optional -- Mockito framework
     testMockio = 'org.mockito:mockito-core:2.1.0-RC.1'
     testEspresso = 'com.android.support.test.espresso:espresso-core:2.2.1'
+    testRunner = 'com.android.support.test:runner:0.5'
+    testRules = 'com.android.support.test:rules:0.5'
     //////////////////////////////////////////////////////////////
 
     annotation = 'com.android.support:support-annotations:23.3.0'
     appcompat = 'com.android.support:appcompat-v7:23.3.0'
-    appSupport = 'com.android.support:support-v4:23.1.0'
+    appSupport = 'com.android.support:support-v4:23.3.0'
     appDesign = 'com.android.support:design:23.3.0'
     appCardview = 'com.android.support:cardview-v7:23.3.0'
-    recyclerView = 'com.android.support:recyclerview-v7:23.0.1'
+    recyclerView = 'com.android.support:recyclerview-v7:23.3.0'
     rxjava = 'io.reactivex:rxjava:1.1.3'
     rxAndroid = 'io.reactivex:rxandroid:1.0.1'
     butterknife = 'com.jakewharton:butterknife:8.0.1'
