--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,6 @@
 android.useDeprecatedNdk=true
 #set org.gradle.jvmargs=-Xmx2048M
 #org.gradle.jvmargs=-Xmx5120M
+org.gradle.jvmargs=-Xmx4608M
 org.gradle.daemon=true
 org.gradle.parallel=true
-org.gradle.jvmargs=-XX:MaxPermSize=512m
