--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ android {
         applicationId "com.cylan.jiafeigou"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        manifestPlaceholders = [NICELY_VALUE: "yun.jfgou.com:446",
+        manifestPlaceholders = [NICELY_VALUE: "yun.jfgou.com:443",
                                 MAT_VALUE   : getMtaAppKey("yun"),
                                 AUTHORITY   : "com.cylan.jiafeigou"]
         customVersionCode
@@ -195,41 +195,41 @@ android {
     productFlavors {
         _test {
             applicationIdSuffix ".test"
-            manifestPlaceholders = [NICELY_VALUE: "test.jfgou.com:446",
+            manifestPlaceholders = [NICELY_VALUE: "test.jfgou.com:443",
                                     MAT_VALUE   : getMtaAppKey("test"),
-                                    AUTHORITY   : "com.cylan.jiafeigou.test"]
+                                    AUTHORITY   : ".test"]
         }
         _test1 {
             applicationIdSuffix ".test1"
-            manifestPlaceholders = [NICELY_VALUE: "test1.jfgou.com:446",
+            manifestPlaceholders = [NICELY_VALUE: "test1.jfgou.com:443",
                                     MAT_VALUE   : getMtaAppKey("test1"),
-                                    AUTHORITY   : "com.cylan.jiafeigou.test1"]
+                                    AUTHORITY   : ".test1"]
         }
 
         _yun {
             //官方运营
-            manifestPlaceholders = [NICELY_VALUE: "yun.jfgou.com:446",
+            manifestPlaceholders = [NICELY_VALUE: "yun.jfgou.com:443",
                                     MAT_VALUE   : getMtaAppKey("yun"),
-                                    AUTHORITY   : "com.cylan.jiafeigou"]
+                                    AUTHORITY   : ""]
         }
         _yun1 {
             applicationIdSuffix ".yun1"
-            manifestPlaceholders = [NICELY_VALUE: "yun1.jfgou.com:446",
+            manifestPlaceholders = [NICELY_VALUE: "yun1.jfgou.com:443",
                                     MAT_VALUE   : getMtaAppKey("yun1"),
-                                    AUTHORITY   : "com.cylan.jiafeigou.yun1"]
+                                    AUTHORITY   : ".yun1"]
         }
         _yf {
             applicationIdSuffix ".yf"
-            manifestPlaceholders = [NICELY_VALUE: "yf.jfgou.com:446",
+            manifestPlaceholders = [NICELY_VALUE: "yf.jfgou.com:443",
                                     MAT_VALUE   : getMtaAppKey("yf"),
-                                    AUTHORITY   : "com.cylan.jiafeigou.yf"]
+                                    AUTHORITY   : ".yf"]
         }
         //中性包
         _zhongxing {
             applicationIdSuffix ".zhongxing"
-            manifestPlaceholders = [NICELY_VALUE: "yun.jfgou.com:446",
+            manifestPlaceholders = [NICELY_VALUE: "yun.jfgou.com:443",
                                     MAT_VALUE   : getMtaAppKey("zhongxing"),
-                                    AUTHORITY   : "com.cylan.jiafeigou.zhongxing"]
+                                    AUTHORITY   : ".zhongxing"]
         }
     }
 }
@@ -275,7 +275,6 @@ dependencies {
     compile rootProject.ext.rxAndroid
     compile rootProject.ext.permis
 
-    compile rootProject.ext.systembartint
     apt rootProject.ext.permisApt
     compile project(':jlib')
     compile files('libs/aliyun-oss-sdk-android-2.2.0.jar')
