--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -225,6 +225,16 @@
             android:name=".n.view.misc.UpdateActivity"
             android:process=":download"
             android:theme="@style/dialog_activity_style" />
+
+        <service
+            android:name=".n.engine.CloudLiveService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":cloudlive" />
+        <activity
+            android:name=".n.view.activity.CloudLiveReturnCallActivity"
+            android:process=".cloudlive"
+             />
     </application>
 
 </manifest>
