--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -244,6 +244,10 @@
             android:name=".n.view.activity.CloudLiveReturnCallActivity"
             android:process=".cloudlive"
              />
+
+        <activity
+            android:name=".n.view.activity.CloudLiveCallInActivity"
+            android:process=".cloudlive"/>
     </application>
 
 </manifest>
